--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+
     <link
       rel="apple-touch-icon"
       sizes="180x180"
@@ -22,6 +23,10 @@
     <link rel="stylesheet" href="./style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nivo App</title>
+    <script
+      src="https://kit.fontawesome.com/a1e833ec34.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <canvas id="bg"></canvas>
@@ -123,8 +128,17 @@
         <blockquote>
           <p>Thanks!</p>
         </blockquote>
+        <button
+          id="return-to-top"
+          class="jumptop"
+          onclick='window.scrollTo({top: 0, behavior: "smooth"});'
+        >
+          <i class="fas fa-arrow-up"></i>
+        </button>
       </div>
     </main>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
